add_library(fs filesystem.cc inputstream.cc chdfs.cc)
add_executable(inputstream_test inputstream_test.cc)
add_executable(cinputstream_test cinputstream_test.cc)
add_executable(perf_tests perf_tests.cc)
target_link_libraries(inputstream_test fs rpc reader common proto ${PROTOBUF_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(cinputstream_test fs rpc reader common proto ${PROTOBUF_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(perf_tests fs rpc reader common proto ${PROTOBUF_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
